# ansible-modules-pm2

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  check.yaml  main.yaml  publish.yaml
ansible/module_utils/: pm2.py
ansible/modules/pm2/: pm2.py
meta/: README.md.j2  gen_readme.py
tests/: molecule.sh
tests/pm2tasks/_tests/: test.yml
tests/pm2tasks/molecule/default/: Dockerfile  Dockerfile.j2  converge.yml  molecule.yml  verify.yml
tests/pm2tasks/tasks/: absent.yaml  main.yaml  main.yml  start_config.yaml  start_script.yaml  stop_script.yaml
