[metadata]
name = ansible-modules-pm2
version = 0.0.1
description = Manage processes via pm2
long_description = file: README.md
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/ansible-modules-pm2
keywords = ansible
license = GNU GPL v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
packages = ansible/modules/pm2
#packages = find:
install_requires =
  ansible>=2.2.0

[options.extras_require]
dev =
  wheel
  twine
  molecule[docker]
  pyyaml
  jinja2
  tabulate
