[metadata]
name = ansible-modules-pm2
version = attr: ansible.module_utils.pm2.__version__
description = attr: ansible.module_utils.pm2.__summary__
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/ansible-modules-pm2
keywords = ansible
license = GNU GPL v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
packages = ansible/modules/pm2
#packages = find:
py_modules =
  ansible/module_utils/pm2
install_requires =
  ansible>=2.2.0

[options.extras_require]
dev =
  wheel
  twine
  molecule[docker]
  pyyaml
  jinja2
  tabulate
