[metadata]
name = ansible-modules-pm2
version = attr: ansible.module_utils.pm2.__version__
description = Ansible module to manage processes via PM2
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/ansible-modules-pm2
keywords = ansible
license = GNU GPL v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
packages = ansible/modules/pm2
#packages = find:
py_modules =
  ansible/module_utils/pm2
install_requires =
  ansible>=2.2.0

[options.extras_require]
dev =
  molecule[docker]
  pyyaml
  jinja2
  tabulate
  black
  isort
  flake8
  flake8-black
  flake8-isort
  pep8-naming


[flake8]
extend-ignore =
    E203,  # See https://github.com/peterjc/flake8-black#configuration, https://github.com/PyCQA/pycodestyle/issues/373
    F401,  # imported but unused
    E501,  # line too long
exclude = .git,__pycache__,.venv,.mypy_cache,tests,docs,build


[isort]
skip = tests/
# Be happy with black formatter
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
lines_between_types = 1
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = tests
